--- a/random.html
+++ b/random.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
 	<!--  TIP 
 	You will find any errors from the head section using the console. -->
@@ -9,6 +10,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<title>Random</title>
 </head>
+
 <body>
 	<header>
 		<nav>
@@ -19,10 +21,11 @@
 				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
+		<h1>Random Page</h1>
+
 	</header>
 
 	<main>
-		<h2>Random Page</h2>
 
 		<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools</a> HTML tutorial as well as the readings from <a href = "https://learn.shayhowe.com/html-css/">Shay Howe's</a> HTML and CSS tutorial</p>.
 	
@@ -31,7 +34,7 @@
 	</main>
 
 	<footer>
-		<p>Colleen van Lent copy 2023</p>
+		<p>Colleen van Lent &copy; 2023</p>
 	</footer>
 </body>
 </html>
