--- a/family.html
+++ b/family.html
@@ -15,7 +15,7 @@
 				<li class="active"><a href = "index.html" >About Me</a></li>
 				<li><a href = "family.html">My Family</a></li>
 				<li><a href = "random.html">Random Stuff</a></li>
-				<li><a href = "si.umich.edu">UMSI</a></li>
+				<li><a href = "http://www.si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
 		<h1>Family</h1>
@@ -26,7 +26,7 @@
 		<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states. We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 			<img src = "images/wisconsin_dells.jpg" width="25" alt = "A boy and two girls in zip line gear posing in front of sign for Sasquatch Lake">
 			<img src = "images/badlands.jpg" width="1000" alt = "Sign of Ben Reifel Visitor Center at Badlands with 3 kids around it">
-			<img src="images/falling.jpg" width="25" alt="Sand dune with kid grabbing hold to the ledge"/>
+			<img src="images/falling.jpg" width="25" alt="Sand dune with kid grabbing hold to the ledge">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Mount Rushmore with a brick wall and tree covering the left and right side of the mountain">
 			<img src = "images/jewel_cave.JPG" width="25" alt="Sign of Jewel Cave National Monument with 3 kids around it ">
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
