--- a/random.html
+++ b/random.html
@@ -25,7 +25,7 @@
 
 	<main>
 
-		<p>Make sure you are doing the readings from the <a href = "www.w3schools.com/html/">W3 Schools</a> HTML tutorial as well as the readings from <a href = "https://learn.shayhowe.com/html-css/">Shay Howe's</a> HTML and CSS tutorial</p>.
+		<p>Make sure you are doing the readings from the <a href = "https://www.w3schools.com/html/">W3 Schools</a> HTML tutorial as well as the readings from <a href = "https://learn.shayhowe.com/html-css/">Shay Howe's</a> HTML and CSS tutorial</p>.
 	
 		<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
